# nim-rustcrypto

./: .gitignore  README.md  compose.yaml  makefile  reinstall.sh  test.sh
.cursor/rules/: project.mdc
.cursor/rules/branch/: 1-rsa.mdc  10-bitcoin-lightning-ethereum-jwt.mdc  13-p256-rsa.mdc  20-fix-api.mdc  27-rust-build-in-actions.mdc  29-fix-release.mdc  3-ecdsa.mdc  31-high-level-api-bcrypt.mdc  34-a-for-wasm32-unknown-unknown.mdc  36-fix-wasm32-archive-file-path.mdc  38-add-wasm32-wasi.mdc  40-add-bls.mdc  42-build-for-arm64.mdc  46-bls-g1-augmented-hash-to-curve-と-pk-in-g2-検証-api.mdc  48-change-bls-base-library-to-blst.mdc  5-hmac.mdc  6-sign-verify-in-ecdsa-sha.mdc  7-shnorr.mdc  9-actions-test.mdc
.github/workflows/: release.yml  test.yml
docker/app/: develop.Dockerfile
docs/: aes-256-gcm-siv.md  aes-256-gcm.md  argon2.md  bcrypt.md  bitcoin.md  blake2.md  bls12-381.md  chacha20-poly1305.md  ed25519.md  ethereum.md  ffi-low-level.md  hkdf.md  hmac.md  jwt-json-web-tokens.md  key-encoding-pkcs8-pem.md  lightning.md  nimcrypto-compat-roadmap.md  p256-ecdsa.md  p384-ecdsa.md  password-hash-phc.md  pbkdf2.md  rsa-signatures-and-encryption.md  scrypt.md  secp256k1-ecdsa-der.md  secp256k1-ecdsa.md  secp256k1-schnorr.md  sha256.md  sha3-keccak.md  x509-certificates.md
example/: config.nims  example.nimble
example/src/: example.nim  main.nim
src/nim-rustcrypto/: rustcrypto.nimble
src/nim-rustcrypto/ci/: rustcrypto_exec_smoke.nim  wasi_sha256_smoke.nim
src/nim-rustcrypto/src/: nim_rustcrypto.nim  rustcrypto.nim
src/nim-rustcrypto/src/nim_rustcrypto/: aesgcm.nim  aesgcmsiv.nim  argon2.nim  blake2.nim  chacha20poly1305.nim  ecdsa.nim  ecdsa_common.nim  ed25519.nim  ethereum.nim  ffi.nim  hkdf.nim  hmac.nim  passwordhash.nim  pbkdf2.nim  pem.nim  pkcs8.nim  scrypt.nim  secp256k1.nim  secp256k1_ecdsa_der.nim  sha256.nim  sha3.nim  utils.nim
src/nim-rustcrypto/src/nim_rustcrypto/algorithm/: common.nim  ed25519.nim  ffi.nim  hmac.nim  p256.nim  p384.nim  pkcs8.nim  rsa.nim  schnorr.nim  secp256k1.nim  secp256k1_ecdsa_der.nim  sha256.nim  sha3.nim
src/nim-rustcrypto/src/rustcrypto/: bitcoin.nim  ethereum.nim  jwt.nim  lightning.nim
src/nim-rustcrypto/src/rustcrypto/algorithm/: aesgcm.nim  aesgcmsiv.nim  argon2.nim  bcrypt.nim  blake2.nim  bls.nim  chacha20poly1305.nim  common.nim  ecdsa_common.nim  ed25519.nim  ffi.nim  hkdf.nim  p256.nim  p384.nim  passwordhash.nim  pbkdf2.nim  pem.nim  pkcs8.nim  rsa.nim  schnorr.nim  scrypt.nim  secp256k1.nim  secp256k1_ecdsa_der.nim  sha3.nim  x509.nim
src/nim-rustcrypto/src/rustcrypto/tools/: fetch_rustcrypto_ffi.nim  fetch_rustcrypto_ffi.sh  resolve_rustcrypto_ffi.nim  rustcrypto_ffi_paths.nim  sync_local_rustcrypto_ffi.nim
src/nim-rustcrypto/tests/: test_aesgcm.nim  test_aesgcmsiv.nim  test_algorithm.nim  test_argon2.nim  test_bitcoin.nim  test_blake2.nim  test_chacha20poly1305.nim  test_ecdsa.nim  test_ed25519.nim  test_ethereum.nim  test_hkdf.nim  test_hmac.nim  test_jwt.nim  test_lightning.nim  test_p384.nim  test_passwordhash.nim  test_pbkdf2.nim  test_pem.nim  test_pkcs8.nim  test_scrypt.nim  test_secp256k1.nim  test_secp256k1_ecdsa_der.nim  test_sha256.nim  test_sha3.nim  utils.nim
src/nim-rustcrypto/tests/algorithm/: test_aesgcm.nim  test_aesgcmsiv.nim  test_argon2.nim  test_bcrypt.nim  test_blake2.nim  test_bls.nim  test_chacha20poly1305.nim  test_ed25519.nim  test_hkdf.nim  test_hmac.nim  test_p256.nim  test_p384.nim  test_passwordhash.nim  test_pbkdf2.nim  test_pem.nim  test_pkcs8.nim  test_rsa.nim  test_schnorr.nim  test_scrypt.nim  test_secp256k1.nim  test_secp256k1_ecdsa_der.nim  test_sha256.nim  test_sha3.nim  test_x509.nim  utils.nim
src/rustcrypto-ffi/: Cargo.toml  build.rs
src/rustcrypto-ffi/src/: aead_common.rs  aes_gcm.rs  aes_gcm_siv.rs  bcrypt.rs  bcrypt_wasm.rs  blake2.rs  bls.rs  chacha20poly1305.rs  ed25519_ops.rs  ed25519_pem.rs  ed25519_pkcs8.rs  hash.rs  hkdf.rs  hmac.rs  lib.rs  oid.rs  p256.rs  p384.rs  password_hash.rs  pbkdf2.rs  rsa.rs  schnorr.rs  scrypt.rs  secp256k1.rs  x509.rs
src/rustcrypto-ffi/src/argon2/: derive.rs  mod.rs  phc.rs
src/rustcrypto-ffi/src/ed25519/: mod.rs  ops.rs  pem.rs  pkcs8.rs
