[package]
name = "rustcrypto-ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
argon2 = { version = "0.5.3", features = ["alloc", "password-hash"] }
bcrypt = "0.19.1"
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
const-oid = "0.9.6"
digest = "0.11.2"
ed25519 = { version = "2.2.3", features = ["alloc", "pkcs8"] }
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "signature"] }
hkdf = "0.13.0"
hmac = "0.13.0"
k256 = "0.13.4"
p256 = "0.13.2"
p384 = "0.13.1"
password-hash = { version = "0.6.1", features = ["phc", "alloc"] }
pbkdf2 = "0.13.0"
pem-rfc7468 = "1.0.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rsa = { version = "0.9.8", features = ["sha2", "pem"] }
scrypt = "0.12.0"
sha2 = "0.11.0"
sha3 = "0.11.0"
x509-cert = "0.2.5"

[lib]
name = "rust_crypto_ffi"
crate-type = ["staticlib"]
