[package]
name = "rustcrypto-ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
aes-gcm-siv = { version = "0.11.1", default-features = false, features = ["aes", "alloc"] }
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "password-hash"] }
blake2 = "0.10.6"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
const-oid = "0.9.6"
digest = "0.11.2"
ed25519 = { version = "2.2.3", default-features = false, features = ["alloc", "pem", "pkcs8"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["alloc", "pkcs8", "signature", "zeroize"] }
hkdf = "0.13.0"
hmac = "0.13.0"
k256 = { version = "0.13.4", default-features = false, features = ["alloc", "ecdsa", "pem", "pkcs8", "schnorr"] }
p256 = { version = "0.13.2", default-features = false, features = ["alloc", "ecdsa", "pem", "pkcs8"] }
p384 = { version = "0.13.1", default-features = false, features = ["alloc", "ecdsa", "pem", "pkcs8"] }
password-hash = { version = "0.6.1", default-features = false, features = ["alloc", "phc"] }
pbkdf2 = "0.13.0"
pem-rfc7468 = "1.0.0"
rsa = { version = "0.9.8", default-features = false, features = ["pem", "sha2", "u64_digit"] }
scrypt = "0.12.0"
sha2 = "0.11.0"
sha3 = "0.11.0"
x509-cert = "0.2.5"

[lib]
name = "rust_crypto_ffi"
crate-type = ["staticlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bcrypt = "0.19.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
